DEV: Add minify optimization and expand -s flag to all test types
Build Optimizations:
- Add --minify flag to all build commands, reducing binary size by ~0.47 MB
- Add Windows metadata flags for professional executable appearance
  (title, publisher, description)
- Update Makefile and package.json with optimization settings

Environment Display Enhancement:
- Expand -s/--show flag to display environment for all test types
  (previously only showed C compilation commands)
- Add displayEnvironmentInfo() helper in BaseTestHandler
- Display full test configuration as formatted JSON
- Show TestMe environment variables (TESTME_*)
- Show custom environment variables from testme.json5
- Disable TTY cursor control when -s is used to prevent output clearing

Documentation Updates:
- Update man page (doc/tm.1) with expanded -s flag description
- Update README.md with new flag functionality
- Update CLI help text in cli.ts

Technical Implementation:
- Modified reporter.ts to skip terminal control codes when showCommands enabled
- Updated all test handlers (JavaScript, TypeScript, Shell, Python, Go,
  Ejscript) to call displayEnvironmentInfo()
- Prevents line-clearing escape sequences from erasing environment output

All 38 tests pass successfully.

--- a/doc/tm.1
+++ b/doc/tm.1
@@ -57,7 +57,7 @@ Set build profile (overrides configuration and PROFILE environment variable). Us
 Run silently with no output, only exit codes. Useful for scripting and automation.
 .TP
 .BR \-s ", " \-\-show
-Display the C compile command used. Shows compiler flags, libraries, and paths for debugging.
+Display test configuration and environment variables. Shows the full test configuration, compiler commands (for C tests), and all environment variables passed to tests. Useful for debugging test execution and environment setup.
 .TP
 .BR \-\-step
 Run tests one at a time with prompts. Forces serial mode and prompts before each test execution.
