FIX: windows stack trace on errors

--- a/AI/releases/v0.8.27.md
+++ b/AI/releases/v0.8.27.md
@@ -22,6 +22,13 @@ Released: October 31, 2025
 - More accurate file and line number reporting for test failures
 - Better handling of complex stack traces with multiple framework layers
 
+**Global Installation Path Handling:**
+- Fixed stack trace detection when TestMe is installed globally via npm/bun
+- Now correctly identifies test file locations on Windows, macOS, and Linux
+- Handles various installation paths: node_modules/@embedthis/testme, .bun/install/global, etc.
+- Added fallback logic in test() error handler to extract location from error stack when primary detection fails
+- Eliminates "unknown file:unknown line" errors in globally-installed TestMe
+
 ## Implementation Details
 
 ### Health Check Changes
