DOC: add --monitor flag to v0.8.29 release notes

--- a/AI/releases/v0.8.29.md
+++ b/AI/releases/v0.8.29.md
@@ -57,6 +57,47 @@ All three patterns now work correctly:
 
 ## Enhancements
 
+### Real-Time Test Output Streaming with --monitor Flag
+
+**New --monitor/-m Flag for Live Output:**
+- Added `--monitor` (short: `-m`) flag to stream test output in real-time to console
+- Only active when running in a TTY (interactive terminal) and not in quiet mode
+- Output is still buffered for result reporting, assertion counting, and test summaries
+- Useful for monitoring long-running tests or debugging test behavior
+
+**How It Works:**
+```bash
+# Stream test output in real-time
+tm --monitor
+
+# Combine with verbose for detailed reporting
+tm --monitor --verbose
+
+# Monitor specific tests
+tm -m "*.tst.c"
+```
+
+**Technical Details:**
+- Uses `ReadableStream` API to stream stdout/stderr while also buffering
+- Disables TTY progress indicators ("⟳ RUN") to prevent clearing streamed output
+- Falls back to standard buffered mode when output is piped or redirected
+- Works with all test types (C, JavaScript, TypeScript, Shell, Python, Go, Ejscript)
+
+**Setup Service Output in Verbose Mode:**
+- Setup service output is now streamed to console in verbose mode
+- Previously, setup service output was only shown on errors
+- Helps with debugging long-running setup processes
+
+**Files Changed:**
+- [src/cli.ts](../../src/cli.ts) - Added `--monitor/-m` flag parsing
+- [src/types.ts](../../src/types.ts) - Added `live` to `CliOptions` and `OutputConfig`
+- [src/handlers/base.ts](../../src/handlers/base.ts) - Streaming logic in `runCommand()`
+- [src/index.ts](../../src/index.ts) - Apply live flag from CLI options to config
+- [src/reporter.ts](../../src/reporter.ts) - Disable TTY cursor control when monitor mode active
+- [src/services.ts](../../src/services.ts) - Stream setup service output in verbose mode
+- [CLAUDE.md](../../CLAUDE.md) - Documentation for --monitor flag
+- [doc/tm.1](../../doc/tm.1) - Man page documentation
+
 ### TESTDIR and CONFIGDIR Now Use Absolute Paths
 
 **Changed Variables to Absolute Paths:**
