DOC: update v0.8.29 release notes with --monitor fix
Added documentation for the --monitor flag bug fix that prevented
real-time output streaming. The flag was not being properly propagated
to test handlers, causing all output to appear only after completion.

--- a/AI/releases/v0.8.29.md
+++ b/AI/releases/v0.8.29.md
@@ -4,6 +4,39 @@ Released: November 4, 2025
 
 ## Bug Fixes
 
+### --monitor Flag Not Streaming Output in Real-Time
+
+**Fixed Live Streaming Not Working:**
+- The `--monitor` (`-m`) flag was not streaming test output in real-time
+- Output only appeared after test completion instead of progressively during execution
+- Particularly noticeable with long-running tests (fuzzing, large test suites)
+
+**Root Cause:**
+- The `findConfigForTest()` method in `src/runner.ts` merged test-specific config with global config
+- BUT it wasn't preserving the `output.live` flag from CLI arguments
+- Other CLI flags (`verbose`, `debugMode`, `keepArtifacts`) were preserved, but `live` was missing
+
+**Solution:**
+- Added `live` flag preservation in config merging at [src/runner.ts:524](../../src/runner.ts#L524)
+- Fixed TypeScript type errors in stream readers at [src/handlers/base.ts:159-160](../../src/handlers/base.ts#L159-L160)
+
+**Impact:**
+- ✅ `--monitor` flag now correctly streams test output as it's generated
+- ✅ Long-running tests show progress in real-time (e.g., fuzzing iteration counters)
+- ✅ Works with all test types (C, JavaScript, TypeScript, Shell, Python, Go, Ejscript)
+- ✅ Requires TTY - automatically disabled when output is piped
+- ✅ Combines with `--verbose` for detailed real-time reporting: `tm -m -v`
+
+**Example:**
+```bash
+# Watch fuzzing progress in real-time
+tm -m -i 50000 http
+# Output appears progressively:
+# Iteration 1000/50000 - Crashes: 0
+# Iteration 2000/50000 - Crashes: 0
+# ...
+```
+
 ### Configuration Variable Expansion in Inherited Configs
 
 **Fixed `${CONFIGDIR}` Expansion in Parent Configs:**
