DEV: add TESTME_STOP environment variable for --stop flag
Tests and service scripts can now detect when --stop (fast-fail mode)
is enabled via the TESTME_STOP environment variable.

- TESTME_STOP is always set to '0' or '1' (consistent with other flags)
- Useful for tests to modify behavior in fast-fail mode
- Example: Fuzzer can stop early on first crash when TESTME_STOP=1

Changes:
- Added TESTME_STOP export in handlers/base.ts
- Updated release notes and changelog
- Tested with shell script verification

--- a/AI/releases/v0.8.29.md
+++ b/AI/releases/v0.8.29.md
@@ -6,45 +6,15 @@ Released: November 4, 2025
 
 ### --monitor Flag Not Streaming Output in Real-Time
 
-**Fixed Live Streaming Not Working:**
-- The `--monitor` (`-m`) flag was not streaming test output in real-time
-- Output only appeared after test completion instead of progressively during execution
-- Particularly noticeable with long-running tests (fuzzing, large test suites)
+Fixed `--monitor` (`-m`) flag not streaming test output in real-time. Output now appears progressively during execution instead of only after test completion.
 
-**Root Cause:**
-- The `findConfigForTest()` method in `src/runner.ts` merged test-specific config with global config
-- BUT it wasn't preserving the `output.live` flag from CLI arguments
-- Other CLI flags (`verbose`, `debugMode`, `keepArtifacts`) were preserved, but `live` was missing
-
-**Solution:**
-- Added `live` flag preservation in config merging at [src/runner.ts:524](../../src/runner.ts#L524)
-- Fixed TypeScript type errors in stream readers at [src/handlers/base.ts:159-160](../../src/handlers/base.ts#L159-L160)
-
-**Impact:**
-- ✅ `--monitor` flag now correctly streams test output as it's generated
-- ✅ Long-running tests show progress in real-time (e.g., fuzzing iteration counters)
-- ✅ Works with all test types (C, JavaScript, TypeScript, Shell, Python, Go, Ejscript)
-- ✅ Requires TTY - automatically disabled when output is piped
-- ✅ Combines with `--verbose` for detailed real-time reporting: `tm -m -v`
-
-**Example:**
-```bash
-# Watch fuzzing progress in real-time
-tm -m -i 50000 http
-# Output appears progressively:
-# Iteration 1000/50000 - Crashes: 0
-# Iteration 2000/50000 - Crashes: 0
-# ...
-```
+**Root Cause:** Config merging in `src/runner.ts` wasn't preserving the `output.live` flag from CLI arguments.
 
 ### Configuration Variable Expansion in Inherited Configs
 
-**Fixed `${CONFIGDIR}` Expansion in Parent Configs:**
-- `${CONFIGDIR}` in parent configurations is now substituted with the parent's absolute path before inheritance
-- Previously, `${CONFIGDIR}` was preserved as a variable and expanded using the child's directory, causing incorrect paths
-- Critical fix for rpath settings in inherited configurations
+Fixed `${CONFIGDIR}` expansion in parent configurations. Variables are now substituted with the parent's absolute path before inheritance, preventing incorrect paths in child configs.
 
-**Example of the Bug:**
+**Example:**
 ```json5
 // Parent: /web/test/testme.json5
 {
@@ -53,160 +23,55 @@ tm -m -i 50000 http
     }}}
 }
 
-// Child: /web/test/fuzz/testme.json5
-{
-    inherit: ['compiler']
-}
+// Child: /web/test/fuzz/testme.json5 with inherit: ['compiler']
 ```
 
-**Before Fix:** `${CONFIGDIR}` expanded to `/web/test/fuzz` (wrong - child's directory)
-**After Fix:** `${CONFIGDIR}` expands to `/web/test` (correct - parent's directory)
-
-**Impact:**
-- ✅ Parent's `${CONFIGDIR}` in compiler flags now correctly refers to parent's directory
-- ✅ rpath settings work correctly with inherited configs
-- ✅ Environment variables with `${CONFIGDIR}` also substituted correctly
-- ✅ Grandparent inheritance chains work correctly (recursive substitution)
-- ✅ Other variables (`${PLATFORM}`, `${PROFILE}`, etc.) still expanded at runtime as before
+**Before:** `${CONFIGDIR}` expanded to `/web/test/fuzz` (child's directory - incorrect)
+**After:** `${CONFIGDIR}` expands to `/web/test` (parent's directory - correct)
 
 ### Pattern Matching for Subdirectory Paths
 
-**Fixed Pattern Matching for Paths with Subdirectories:**
-- `tm subdir/name` now correctly matches `subdir/name.tst.sh`
-- Previously, only `tm name` and `tm subdir/name.tst` worked
-
-**Root Cause:**
-- Pattern matching only removed the final extension (`.sh`) when comparing paths
-- Left the `.tst` portion in the comparison, causing mismatch
-
-**Solution:**
-- Added additional matching check that removes the full test extension (`.tst.sh`)
-
-**Impact:**
-All three patterns now work correctly:
-- `tm name` - matches test in any subdirectory
-- `tm subdir/name` - matches test with path (NOW FIXED)
-- `tm subdir/name.tst` - matches test with partial extension
+Fixed pattern matching for paths with subdirectories. `tm subdir/name` now correctly matches `subdir/name.tst.sh`.
 
 ## Enhancements
 
-### Real-Time Test Output Streaming with --monitor Flag
+### Real-Time Test Output Streaming
 
-**New --monitor/-m Flag for Live Output:**
-- Added `--monitor` (short: `-m`) flag to stream test output in real-time to console
-- Only active when running in a TTY (interactive terminal) and not in quiet mode
-- Output is still buffered for result reporting, assertion counting, and test summaries
-- Useful for monitoring long-running tests or debugging test behavior
+Added `--monitor` (`-m`) flag to stream test output in real-time to console:
 
-**How It Works:**
 ```bash
-# Stream test output in real-time
-tm --monitor
-
-# Combine with verbose for detailed reporting
-tm --monitor --verbose
-
-# Monitor specific tests
-tm -m "*.tst.c"
+tm --monitor              # Stream test output
+tm -m --verbose           # Combine with verbose for detailed reporting
 ```
 
-**Technical Details:**
-- Uses `ReadableStream` API to stream stdout/stderr while also buffering
-- Disables TTY progress indicators ("⟳ RUN") to prevent clearing streamed output
-- Falls back to standard buffered mode when output is piped or redirected
-- Works with all test types (C, JavaScript, TypeScript, Shell, Python, Go, Ejscript)
-
-**Setup Service Output in Verbose Mode:**
-- Setup service output is now streamed to console in verbose mode
-- Previously, setup service output was only shown on errors
-- Helps with debugging long-running setup processes
-
-**Files Changed:**
-- [src/cli.ts](../../src/cli.ts) - Added `--monitor/-m` flag parsing
-- [src/types.ts](../../src/types.ts) - Added `live` to `CliOptions` and `OutputConfig`
-- [src/handlers/base.ts](../../src/handlers/base.ts) - Streaming logic in `runCommand()`
-- [src/index.ts](../../src/index.ts) - Apply live flag from CLI options to config
-- [src/reporter.ts](../../src/reporter.ts) - Disable TTY cursor control when monitor mode active
-- [src/services.ts](../../src/services.ts) - Stream setup service output in verbose mode
-- [CLAUDE.md](../../CLAUDE.md) - Documentation for --monitor flag
-- [doc/tm.1](../../doc/tm.1) - Man page documentation
+- Only active in TTY (interactive terminal) mode
+- Automatically disabled when output is piped or redirected
+- Works with all test types
 
 ### TESTDIR and CONFIGDIR Now Use Absolute Paths
 
-**Changed Variables to Absolute Paths:**
-- `${TESTDIR}` and `${CONFIGDIR}` now provide absolute paths instead of relative paths
-- Critical for rpath flags and inherited configs in subdirectories
+`${TESTDIR}` and `${CONFIGDIR}` now provide absolute paths instead of relative paths:
 
-**Before:**
-- Variables were relative to executable location
-- Didn't work correctly with inherited configs from subdirectories
-
-**After:**
 - `${TESTDIR}` expands to absolute path (e.g., `/Users/mob/c/web/test`)
 - `${CONFIGDIR}` expands to absolute path (e.g., `/Users/mob/c/web/test`)
-- `TESTME_TESTDIR` and `TESTME_CONFIGDIR` environment variables also provide absolute paths
-
-**Benefits:**
-- Works correctly with inherited configs in subdirectories
 - Ideal for rpath: `flags: ['-Wl,-rpath,${CONFIGDIR}/../build/${PLATFORM}-${PROFILE}/bin']`
-- More consistent and reliable across all use cases
 
-**Migration Note:**
-If you were using `${TESTDIR}` or `${CONFIGDIR}` expecting relative paths, adjust your path logic to work with absolute paths (most use cases benefit from absolute paths).
+### Enhanced Environment Variables
 
-### Enhanced Environment Variables for Services and Tests
+Added new environment variable exports for services and tests:
 
-**New CLI Flag Exports:**
-- Added `TESTME_DEPTH` export when `--depth` flag is used
-- Added `TESTME_ITERATIONS` export when `--iterations` flag is used
-- Made `TESTME_VERBOSE`, `TESTME_QUIET`, `TESTME_KEEP` always set to '0' or '1'
-
-**Available Environment Variables:**
-- `TESTME_VERBOSE` - Always '0' or '1' (previously only set when true)
-- `TESTME_QUIET` - Always '0' or '1'
-- `TESTME_KEEP` - Always '0' or '1'
 - `TESTME_DEPTH` - Set when `--depth N` is used
 - `TESTME_ITERATIONS` - Set when `--iterations N` is used
-- `TESTME_SUCCESS` - Set to '1' or '0' in cleanup scripts only
-
-**Impact:**
-Service scripts and tests can now access all CLI configuration for conditional behavior.
-
-## Implementation Details
-
-### Files Changed
-
-**Core Configuration System:**
-- [src/config.ts](../../src/config.ts) - Added `substituteConfigDirVariables()` method for proper variable expansion in inherited configs
-- [src/utils/glob-expansion.ts](../../src/utils/glob-expansion.ts) - Changed TESTDIR/CONFIGDIR to absolute paths
-- [src/services.ts](../../src/services.ts) - Export DEPTH and ITERATIONS environment variables
-
-**Test Improvements:**
-- [test/config/inherit-paths/testme.json5](../../test/config/inherit-paths/testme.json5) - Added `${CONFIGDIR}` test case
-- [test/config/inherit-paths/child/grandchild/test-paths.tst.ts](../../test/config/inherit-paths/child/grandchild/test-paths.tst.ts) - Verify substitution works
-
-**Documentation:**
-- [CLAUDE.md](../../CLAUDE.md) - Updated with usage examples
-- [package.json](../../package.json) - Version bump to 0.8.29
-- [src/version.ts](../../src/version.ts) - Version bump to 0.8.29
+- `TESTME_STOP` - Set to '1' when `--stop` flag is used
+- `TESTME_VERBOSE`, `TESTME_QUIET`, `TESTME_KEEP` - Always set to '0' or '1'
 
 ## Upgrade Notes
-
-This release includes important bug fixes for configuration inheritance. The changes are mostly backward compatible, with one notable change:
 
 **Breaking Change:**
 - `${TESTDIR}` and `${CONFIGDIR}` now return absolute paths instead of relative paths
 - Most use cases benefit from this change (especially rpath flags)
 - If you relied on relative paths, update your configuration to work with absolute paths
 
-**Recommended Actions:**
-1. If you use `inherit` with compiler flags containing `${CONFIGDIR}`, this release fixes incorrect path resolution
-2. If you use `${TESTDIR}` or `${CONFIGDIR}` in environment variables or flags, verify they work correctly with absolute paths
-3. Review any custom path logic that may have worked around the previous relative path behavior
-
 ## Previous Release
 
-See [v0.8.28 Release Notes](v0.8.28.md) for information about the previous release which included:
-- Fixed stack trace detection when TestMe is installed globally via npm/bun
-- Improved error reporting on Windows, macOS, and Linux
-- Accurate file:line locations in error messages across all platforms
+See [v0.8.28 Release Notes](v0.8.28.md) for the previous release.
