DOC: update release notes

--- a/AI/releases/v0.8.29.md
+++ b/AI/releases/v0.8.29.md
@@ -15,12 +15,17 @@ Fixed `--monitor` (`-m`) flag not streaming test output in real-time. Output now
 Fixed `${CONFIGDIR}` expansion in parent configurations. Variables are now substituted with the parent's absolute path before inheritance, preventing incorrect paths in child configs.
 
 **Example:**
+
 ```json5
 // Parent: /web/test/testme.json5
 {
-    compiler: { c: { gcc: {
-        flags: ['-Wl,-rpath,${CONFIGDIR}/../build/bin']
-    }}}
+    compiler: {
+        c: {
+            gcc: {
+                flags: ['-Wl,-rpath,${CONFIGDIR}/../build/bin'],
+            },
+        },
+    },
 }
 
 // Child: /web/test/fuzz/testme.json5 with inherit: ['compiler']
@@ -44,33 +49,34 @@ tm --monitor              # Stream test output
 tm -m --verbose           # Combine with verbose for detailed reporting
 ```
 
-- Only active in TTY (interactive terminal) mode
-- Automatically disabled when output is piped or redirected
-- Works with all test types
+-   Only active in TTY (interactive terminal) mode
+-   Automatically disabled when output is piped or redirected
+-   Works with all test types
 
 ### TESTDIR and CONFIGDIR Now Use Absolute Paths
 
 `${TESTDIR}` and `${CONFIGDIR}` now provide absolute paths instead of relative paths:
 
-- `${TESTDIR}` expands to absolute path (e.g., `/Users/mob/c/web/test`)
-- `${CONFIGDIR}` expands to absolute path (e.g., `/Users/mob/c/web/test`)
-- Ideal for rpath: `flags: ['-Wl,-rpath,${CONFIGDIR}/../build/${PLATFORM}-${PROFILE}/bin']`
+-   `${TESTDIR}` expands to absolute path (e.g., `/Users/mob/c/web/test`)
+-   `${CONFIGDIR}` expands to absolute path (e.g., `/Users/mob/c/web/test`)
+-   Ideal for rpath: `flags: ['-Wl,-rpath,${CONFIGDIR}/../build/${PLATFORM}-${PROFILE}/bin']`
 
 ### Enhanced Environment Variables
 
 Added new environment variable exports for services and tests:
 
-- `TESTME_DEPTH` - Set when `--depth N` is used
-- `TESTME_ITERATIONS` - Set when `--iterations N` is used
-- `TESTME_STOP` - Set to '1' when `--stop` flag is used
-- `TESTME_VERBOSE`, `TESTME_QUIET`, `TESTME_KEEP` - Always set to '0' or '1'
+-   `TESTME_DEPTH` - Set when `--depth N` is used, otherwise unset
+-   `TESTME_ITERATIONS` - Always set (defaults to '1' if `--iterations` not specified)
+-   `TESTME_STOP` - Always set to '0' or '1' (based on `--stop` flag)
+-   `TESTME_VERBOSE`, `TESTME_QUIET`, `TESTME_KEEP` - Always set to '0' or '1'
 
 ## Upgrade Notes
 
 **Breaking Change:**
-- `${TESTDIR}` and `${CONFIGDIR}` now return absolute paths instead of relative paths
-- Most use cases benefit from this change (especially rpath flags)
-- If you relied on relative paths, update your configuration to work with absolute paths
+
+-   `${TESTDIR}` and `${CONFIGDIR}` now return absolute paths instead of relative paths
+-   Most use cases benefit from this change (especially rpath flags)
+-   If you relied on relative paths, update your configuration to work with absolute paths
 
 ## Previous Release
 
