DOC: add TESTME_STOP fix to v0.8.29 release notes

--- a/AI/releases/v0.8.29.md
+++ b/AI/releases/v0.8.29.md
@@ -4,6 +4,14 @@ Released: November 4, 2025
 
 ## Bug Fixes
 
+### TESTME_STOP Environment Variable Not Propagating to Tests
+
+Fixed `TESTME_STOP` environment variable not being set correctly when using the `--stop` flag. Tests with test-specific configurations were seeing `TESTME_STOP=0` even when running with `--stop`.
+
+**Root Cause:** The `findConfigForTest()` method in `src/runner.ts` was missing `stopOnFailure` from the list of CLI overrides to preserve during config merging.
+
+**Impact:** Tests can now reliably detect fast-fail mode (e.g., fuzzers can stop early on first crash when `TESTME_STOP=1`).
+
 ### --monitor Flag Not Streaming Output in Real-Time
 
 Fixed `--monitor` (`-m`) flag not streaming test output in real-time. Output now appears progressively during execution instead of only after test completion.
