DEV: add --duration support

--- a/AI/releases/v0.8.30.md
+++ b/AI/releases/v0.8.30.md
@@ -16,9 +16,9 @@ Fixed `--monitor` (`-m`) flag not streaming test output in real-time during test
 
 **Fixes:**
 
-- Added `fflush(stdout)` and `fflush(stderr)` after all printf/fprintf calls in C test utility functions
-- Removed strict TTY requirement - when user explicitly requests `--monitor`, honor it regardless of TTY status
-- Added description parameter to `runCommand` calls for better timeout error messages
+-   Added `fflush(stdout)` and `fflush(stderr)` after all printf/fprintf calls in C test utility functions
+-   Removed strict TTY requirement - when user explicitly requests `--monitor`, honor it regardless of TTY status
+-   Added description parameter to `runCommand` calls for better timeout error messages
 
 **Impact:** Long-running tests (like memory leak detection) now show progress in real-time when using `--monitor` flag.
 
@@ -32,7 +32,44 @@ Added platform detection to skip Go tests on Windows. Go tests are now automatic
 
 ## Enhancements
 
-(TBD)
+### Duration Flag for Test Control
+
+Added `--duration <COUNT>` CLI flag to set a duration value that is exported to tests and service scripts via the `TESTME_DURATION` environment variable. This is useful for tests that need to run for a specific duration, such as load tests that scale based on time, performance tests with configurable run times, and integration tests with timeout-based scenarios.
+
+**Features:**
+
+-   Supports multiple time unit suffixes:
+    -   No suffix or `sec`/`secs` - Seconds (e.g., `--duration 30`)
+    -   `min`/`mins` - Minutes (e.g., `--duration 5mins` → 300 seconds)
+    -   `hr`/`hrs`/`hour`/`hours` - Hours (e.g., `--duration 2hrs` → 7200 seconds)
+    -   `day`/`days` - Days (e.g., `--duration 3days` → 259200 seconds)
+-   Supports decimal values (e.g., `--duration 1.5hours` → 5400 seconds)
+-   Duration is always converted to seconds and exported as `TESTME_DURATION`
+-   Available in all test types (C, Shell, JavaScript, TypeScript, Python, Go, Ejscript)
+-   Available in all service scripts (skip, environment, prep, setup, cleanup)
+
+**Usage Examples:**
+
+```bash
+tm --duration 30 "stress-test"          # 30 seconds
+tm --duration 5mins "integration-test"  # 5 minutes = 300 seconds
+tm --duration 2hrs "soak-test"          # 2 hours = 7200 seconds
+tm --duration 1day "endurance-test"     # 1 day = 86400 seconds
+```
+
+**Implementation:**
+
+-   CLI flag parsing in `src/cli.ts` with `parseDuration()` helper
+-   Environment variable export in `src/handlers/base.ts` and `src/services.ts`
+-   Configuration type updates in `src/types.ts`
+-   Documentation updates in man page, README, and CLI help
+
+**Use Cases:**
+
+-   Tests that need to run for a specific duration
+-   Load tests that scale based on time
+-   Performance tests with configurable run times
+-   Integration tests with timeout-based scenarios
 
 ## Upgrade Notes
 
